# payos

./: .gitignore  Cargo.toml  README.md  payos.db
src/: code.rs  funmenu.rs  grid.rs  input.rs  main.rs  people.rs  richbutton.rs  secret.rs  style.rs  util.rs
src/funmenu/: sounds.rs  wheel.rs
src/popup/: boot.rs  generic.rs  granted.rs  mod.rs  unauth.rs
src/secret/: cat.rs  dog.rs
src/util/: browser.rs  saved.rs  web.rs
src/widgets/: code.rs  grid.rs  mod.rs  quote.rs  richbutton.rs
web/: go.mod  go.sum  main.go
web/templates/: edit.html  index.html  text.html
