[package]
name = "payos"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
local-ip-address = "0.6.12"
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
sqlite = "0.37.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
